fix: Improve UI and add new fonts and colors
Updates the application's Tailwind CSS configuration to include new font families and color palettes. Also refactors the `App.tsx` and `LoginScreen.tsx` components to improve rendering performance and user experience. A debugging log has been added to `App.tsx` to confirm successful mounting.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
               raleway: ['Raleway', 'sans-serif'],
               roboto: ['Roboto', 'sans-serif'],
               'source-code-pro': ['Source Code Pro', 'monospace'],
-              // Added Fonts
               nunito: ['Nunito', 'sans-serif'],
               'work-sans': ['Work Sans', 'sans-serif'],
               rubik: ['Rubik', 'sans-serif'],
@@ -58,14 +57,13 @@
               'ibm-plex-mono': ['IBM Plex Mono', 'monospace'],
               'indie-flower': ['Indie Flower', 'cursive'],
               'patrick-hand': ['Patrick Hand', 'cursive'],
-              // New user-requested fonts
               'playpen-sans': ['Playpen Sans', 'cursive'],
               'bree-serif': ['Bree Serif', 'serif'],
               chewy: ['Chewy', 'cursive'],
               'balsamiq-sans': ['Balsamiq Sans', 'cursive'],
             },
             colors: {
-              primary: { // Turquoise
+              primary: {
                 '50': '#effeff',
                 '100': '#dffcff',
                 '200': '#bbf8ff',
@@ -78,7 +76,7 @@
                 '900': '#00686f',
                 '950': '#004349',
               },
-              gold: { // Metallic Gold
+              gold: {
                 '50': '#fbf8ef',
                 '100': '#f6efd9',
                 '200': '#eddfb0',
@@ -91,7 +89,7 @@
                 '900': '#6e5121',
                 '950': '#412d12',
               },
-              accent: { // Energetic Orange
+              accent: {
                 '50': '#fff4f0',
                 '100': '#ffe6dc',
                 '200': '#ffccb9',
