--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
         padding: 0;
         overflow-x: hidden;
         width: 100%;
-        position: fixed; /* iOS overflow fix */
-        overflow-y: auto;
+        /* Removed position: fixed to allow natural mobile viewport handling */
       }
       #root {
         height: 100%;
