feat: Improve PWA and styling features
Add meta tags for PWA capabilities and theme colors to index.html.
Refactor `TextStyle` type and related components to use `textDecoration` instead of `textDecorationLine`.
Update font loading and selection logic.
Enhance mobile layout and responsiveness.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#030712" media="(prefers-color-scheme: dark)">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>CarouMate: AI Carousel Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -127,15 +132,17 @@
     <style>
       html, body {
         height: 100%;
+        width: 100%;
         margin: 0;
         padding: 0;
         overflow-x: hidden;
-        width: 100%;
-        /* Removed position: fixed to allow natural mobile viewport handling */
+        -webkit-text-size-adjust: 100%;
+        touch-action: manipulation;
       }
       #root {
         height: 100%;
         width: 100%;
+        max-width: 100vw;
       }
       /* Custom Scrollbar */
       ::-webkit-scrollbar {
